--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ buildscript {
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'application'
+
+mainClassName = "eu.dragulescu.${rootProject.name}.Etcd2migrateKt"
 
 repositories {
     mavenCentral()
