--- a/build.gradle
+++ b/build.gradle
@@ -21,10 +21,16 @@ mainClassName = "eu.dragulescu.${rootProject.name}.Etcd2migrateKt"
 repositories {
     mavenCentral()
     jcenter()
+    maven {
+        url 'https://dl.bintray.com/kotlin/exposed/'
+    }
 }
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "khttp:khttp:0.1.0"
+    compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
+    compile 'org.jetbrains.exposed:exposed:0.8.5'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
